# GradePilot

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
gradepilot/: __main__.py  config.py  logging_setup.py  profiles.py
gradepilot/automation/: inputter.py
gradepilot/capture/: overlay.py  screenshot.py
gradepilot/grading/: base.py  grader.py  openai_compatible.py  prompt.py
gradepilot/ocr/: __init__.py  base.py  paddle_ocr.py  vlm_ocr.py
gradepilot/session/: runner.py  store.py
gradepilot/ui/: control_window.py  overlay.py  profile_capture.py  rubric_editor.py
scripts/: gradepilot_entry.py
tests/: test_capture.py  test_config.py  test_ocr_vlm.py  test_profiles.py  test_store.py
