[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradepilot"
version = "0.1.0"
description = "Human-in-the-loop grading assistant for browser-based exam platforms."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GradePilot" }]
license = { text = "Proprietary" }
dependencies = [
    "PyQt6>=6.6",
    "mss>=9.0",
    "pillow>=10.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
paddle = ["paddleocr>=2.7", "paddlepaddle>=2.6"]
dev = ["pytest>=8.0"]

[project.scripts]
gradepilot = "gradepilot.__main__:main"

[tool.setuptools.packages.find]
include = ["gradepilot*"]
exclude = ["tests*", "data*", "profiles*"]
